# mailing_management_service

./: .env.sample  README.md  groups.json  pyproject.toml
blog/: admin.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_created_at_blog_image_blog_view_counter.py  0003_blog_is_published_blog_slug.py  0004_alter_blog_image.py  0005_rename_blog_post.py  0006_alter_post_view_counter.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
config/: settings.py  urls.py
main/: admin.py  apps.py  form.py  models.py  services.py  urls.py  views.py
main/management/commands/: startmailing.py
main/migrations/: 0001_initial.py  0002_alter_client_email.py  0003_alter_mailing_last_datetime.py  0004_alter_mailing_next_datetime.py  0005_client_owner_mailing_is_active_mailing_owner_and_more.py  0006_alter_mailing_is_active.py  0007_alter_mailing_options.py  0008_mailinglog_owner.py
main/templates/main/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  contact.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailinglog_detail.html  mailinglog_list.html  main_manager_page.html  main_page.html  make_mailing.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
main/templatetags/: my_tags.py
users/: form.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_options.py
users/templates/: login.html
(+6 files in other folders)
